--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-use-wizard": "^2.2.3",
     "viem": "~1.10.9",
     "wagmi": "^1.4.1"
   },
